Add: addProduct form, firebase

--- a/Public/404.html
+++ b/Public/404.html
@@ -23,7 +23,7 @@
 
     <div class="content-container">
         <img src="img/404.png" class="four-0-four-image" alt="">
-        <p class="four-0-four-msg">Looks like you are lost. <br> Head to back to our <a href="#">homepage</a></p>
+        <p class="four-0-four-msg">Looks like you are lost. <br> Head to back to our <a href="/">homepage</a></p>
     </div>
 
     <footer></footer>
