--- a/Public/checkout.html
+++ b/Public/checkout.html
@@ -8,8 +8,9 @@
 
     <link rel="stylesheet" href="css/signup.css">
     <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/cart.css">
+
     <link rel="stylesheet" href="css/checkout.css">
+    <link rel="stylesheet" href="css/cart.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
@@ -53,10 +54,11 @@
         </div>
         <div class="checkout-section">
             <div class="checkout-box">
-                <p class="text">your total bill,</p>
+                <p class="text">Your total bill,</p>
                 <h1 class="bill">$00</h1>
                 <button class="place-order-btn">place order</button>
 <!--                <a href="/checkout" class="checkout-btn">checkout</a>-->
+
             </div>
         </div>
     </div>
@@ -68,7 +70,7 @@
     <script src="js/home.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/footer.js"></script>
-    <script src="js/token.js"></script>
+<!--    <script src="js/token.js"></script>-->
 
 </body>
 </html>
