--- a/Public/index.html
+++ b/Public/index.html
@@ -28,7 +28,8 @@
     <header class="hero-section">
         <div class="content">
             <img src="img/logo-green.png" class="logo" alt="">
-            <p class="sub-heading">Where Style Meets Elegance, and Fashion Knows No Bounds</p>
+            <p class="sub-heading">Where Style Meets Elegance</p>
+            <p class="sub-heading">and Fashion Knows No Bounds</p>
         </div>
     </header>
 
@@ -42,14 +43,14 @@
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/card1.png" class="product-thumb" alt="">
+                    <span class="discount-tag">30% off</span>
+                    <img src="img/products/product_Diaz_Blouse_EB_IVE_Top_NZ_1.png" class="product-thumb" alt="">
                     <button class="card-btn">add to wishlist</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$30</span><span class="actual-price">$60</span>
+                    <h2 class="product-brand">EB&IVE</h2>
+                    <p class="product-short-des">Diaz luxurious linen Blouse</p>
+                    <span class="price">$134.95</span><span class="actual-price">$175.45</span>
                 </div>
             </div>
             <div class="product-card">
@@ -91,7 +92,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="img/card5.png" class="product-thumb" alt="">
+                    <img src="img/products/product_NauticaClassicFitDeckPolo_1.png" class="product-thumb" alt="">
                     <button class="card-btn">add to wishlist</button>
                 </div>
                 <div class="product-info">
@@ -142,15 +143,15 @@
     <section id="men-tshirt-products-2"></section>
     <!--  COLLECTIONS  -->
     <section class="collection-container">
-        <a href="#" class="collection">
+        <a href="/women" class="collection">
             <img src="img/women-collection.png" alt="">
             <p class="collection-title">For Her</p>
         </a>
-        <a href="#" class="collection">
+        <a href="/men" class="collection">
             <img src="img/men-collection.png" alt="">
             <p class="collection-title">For Him</p>
         </a>
-        <a href="#" class="collection">
+        <a href="/accessories" class="collection">
             <img src="img/accessories-collection.png" alt="">
             <p class="collection-title">accessories</p>
         </a>
@@ -165,13 +166,13 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
-                    <img src="img/card-w1.png" class="product-thumb" alt="">
+                    <img src="img/products/product_Vannes_Cardigan_HAVEN_Top_3.png" class="product-thumb" alt="">
                     <button class="card-btn">add to wishlist</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">brand</h2>
                     <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
+                    <span class="price">$120</span><span class="actual-price">$240</span>
                 </div>
             </div>
             <div class="product-card">
