--- a/Public/signup.html
+++ b/Public/signup.html
@@ -8,11 +8,6 @@
 
     <link rel="stylesheet" href="css/signup.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
-    <link rel="manifest" href="img/icons/site.webmanifest">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krub:wght@500&display=swap" rel="stylesheet">
@@ -34,13 +29,14 @@
             <input type="password" autocomplete="new-password" id="password" placeholder="password">
             <input type="text" autocomplete="off" id="number" placeholder="phone number">
             <input type="checkbox" class="checkbox" checked id="term-and-cond">
-            <label for="term-and-cond">Agree to our <a href="#">Term and Condition</a></label>
+            <label for="term-and-cond">I agree with <a href="#">Term and Condition</a></label>
             <br>
             <input type="checkbox" class="checkbox" id="notification">
-            <label for="notification">Agree to receive our <a href="#">upcoming offers and events mails</a></label>
-            <button class="submit-btn">Create an Account</button>
+            <label for="notification">I agree to receive <a href="#">upcoming offers and news</a></label>
+            <button class="submit-btn">Create Account</button>
         </div>
-        <a href="/login" class="link">Already have an account? Login here</a>
+        <span>Already have an account?</span>
+        <a href="/login" class="link">Login here</a>
     </div>
 
     <script src="js/form.js"></script>
