--- a/Public/product.html
+++ b/Public/product.html
@@ -24,6 +24,7 @@
 
     <section class="product-details">
         <div class="image-slider">
+<!--            <img src="img/product image 1.png" class="active" alt="">-->
             <div class="product-images">
                 <img src="img/product image 1.png" class="active" alt="">
                 <img src="img/product image 2.png" alt="">
@@ -40,10 +41,10 @@
 
             <p class="product-sub-heading">select size</p>
 
-            <input type="radio" name="size" value="xs" checked hidden id="xs-size">
+            <input type="radio" name="size" value="s" hidden id="xs-size">
             <label for="xs-size" class="size-radio-btn check">xs</label>
             <input type="radio" name="size" value="s" hidden id="s-size">
-            <label for="s-size" class="size-radio-btn check">s</label>
+            <label for="s-size" class="size-radio-btn">s</label>
             <input type="radio" name="size" value="m" hidden id="m-size">
             <label for="m-size" class="size-radio-btn">m</label>
             <input type="radio" name="size" value="l" hidden id="l-size">
@@ -56,8 +57,8 @@
             <label for="xxxl-size" class="size-radio-btn">xxxl</label>
 
             <div class="btn-group">
-                <button class="btn card-btn">add to card</button>
-                <button class="btn wishlist-btn">add to wishlist</button>
+                <button class="btn mycard-btn">Add to Card</button>
+                <button class="btn wishlist-btn">Add to Wishlist</button>
             </div>
         </div>
     </section>
@@ -70,7 +71,7 @@
     <section class="container-for-card-slider"></section>
     <!--  cards-container Shirts -->
     <section class="product">
-        <h2 class="product-category">Shirts</h2>
+        <h2 class="product-category">You also may like</h2>
         <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
         <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
         <div class="product-container">
@@ -162,111 +163,6 @@
                 <div class="product-image">
                     <span class="discount-tag">50% off</span>
                     <img src="img/card-m4.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!--  cards container Shoes -->
-    <section class="product">
-        <h2 class="product-category">Shoes</h2>
-        <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
-        <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
-        <div class="product-container">
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/card-woman-shoes1.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/card-woman-shoes2.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/card-woman-shoes3.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/card-woman-shoes4.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/card-man-shoes1.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/card-man-shoes2.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/card-man-shoes3.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/card-man-shoes4.png" class="product-thumb" alt="">
                     <button class="card-btn">add to wishlist</button>
                 </div>
                 <div class="product-info">
