Add: collections html, css

--- a/Public/addProduct.html
+++ b/Public/addProduct.html
@@ -198,6 +198,6 @@
 <!--    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-storage.js"></script>-->
 
     <script src="js/addProduct.js"></script>
-    <script src="js/token.js"></script>
+<!--    <script src="js/token.js"></script>-->
 </body>
 </html>
