--- a/Public/women.html
+++ b/Public/women.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Page not found</title>
+    <title>Women</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/404.css">
+    <link rel="stylesheet" href="css/women.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
@@ -21,10 +21,13 @@
 <body>
     <nav class="navbar"></nav>
 
-    <div class="content-container background-image">
-        <img src="img/404.png" class="four-0-four-image" alt="">
-        <p class="four-0-four-msg">Looks like you are lost. <br> Head to back to our <a href="/">homepage</a></p>
-<!--        <img src="img/404_background.png" class="background-image" alt="">-->
+    <div class="content-container image-container background-image">
+        <p class="collection-title">Collection For Her</p>
+        <p class="collection-short-des">where elegance and fashion unite, <br> allowing every woman <br>
+            to explore her unique style <br>  without bounds.</p>
+
+<!--        <img src="img/women-collection.png" class="section-image" alt="">-->
+
     </div>
 
     <footer></footer>
