Add: privacy and terms

--- a/Public/terms.html
+++ b/Public/terms.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Accessories</title>
+    <title>Terms and Conditions</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/accessories.css">
-<!--    <link rel="stylesheet" href="css/404.css">-->
+    <link rel="stylesheet" href="css/terms.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
@@ -22,13 +21,50 @@
 <body>
     <nav class="navbar"></nav>
 
-    <div class="content-container image-container background-image">
-        <p class="collection-title">Accessories</p>
-        <p class="collection-short-des">From timeless classics  <br>to contemporary pieces,  <br>find the perfect accents to express <br> your unique elegance.</p>
+    <header>
+        <div class="section-heading">
+            <h1 class="heading">Terms and Conditions</h1>
+            <p class="terms-info">Welcome to VF Shop!
+            <p class="terms-info">By using our website and services, you agree to the following terms:</p>
+        </div>
+    </header>
 
-<!--        <img src="img/men-collection.png" class="section-image" alt="">-->
+    <section>
+        <h3 class="heading">1. Educational Purpose</h3>
+        <p class="terms-info">The VF Shop website is an educational pilot project. It does not involve real transactions or payments and is intended solely for educational purposes.</p>
+    </section>
 
-    </div>
+    <section>
+        <h3 class="heading">2. Shopping Guidelines</h3>
+        <p class="terms-info">Enjoy browsing and shopping with us. While you can simulate the shopping experience, there won't be real payments or financial transactions. It's all for learning and exploration! Make sure to follow our store's guidelines and policies.</p>
+    </section>
+
+    <section>
+        <h3 class="heading">3. User Responsibilities</h3>
+        <p class="terms-info">Users are responsible for their actions on this educational platform and must not engage in unlawful activities.</p>
+    </section>
+
+    <section>
+        <h3 class="heading">4. Disclaimer</h3>
+        <p class="terms-info">This project offers educational content only. VF Shop and its developers are not liable for any consequences related to the use of this website.</p>
+    </section>
+
+    <section>
+        <h3 class="heading">5. Privacy</h3>
+        <p class="terms-info">Your data is important. Read our <a href="#">Privacy Policy</a> to understand how we handle your information.</p>
+    </section>
+
+    <section>
+        <h3 class="heading">6. Changes to Terms</h3>
+        <p class="terms-info">We may revise these terms for our educational pilot project at any time without notice. </p>
+    </section>
+
+    <section>
+        <h3 class="heading">7. Contact Us</h3>
+        <p class="terms-info">Have questions? Contact our support team for assistance.<br> </p>
+        <p class="terms-info">Thanks for choosing VF Shop website. Explore and discover the world of fashion.<br> </p>
+    </section>
+
 
     <footer></footer>
     <script src="js/nav.js"></script>
