Update: signup, checkout, addProduct

--- a/Public/mail.html
+++ b/Public/mail.html
@@ -48,11 +48,17 @@
             font-size: 18px;
             text-transform: capitalize;
         }
+        .logo{
+            height: 150px;
+            display: block;
+            margin: auto;
+        }
     </style>
 
 </head>
 <body>
     <div>
+        <img src="img/logo-green.png" class="logo" alt="">
         <h1 class="heading">dear user, <span>your order is successfully placed</span></h1>
         <button class="btn">check status</button>
     </div>
