--- a/Public/checkout.html
+++ b/Public/checkout.html
@@ -69,6 +69,7 @@
     <script src="js/nav.js"></script>
     <script src="js/home.js"></script>
     <script src="js/cart.js"></script>
+    <script src="js/checkout.js"></script>
     <script src="js/footer.js"></script>
 <!--    <script src="js/token.js"></script>-->
 
