--- a/Public/signup.html
+++ b/Public/signup.html
@@ -33,8 +33,8 @@
             <input type="email" autocomplete="off" id="email" placeholder="email">
             <input type="password" autocomplete="new-password" id="password" placeholder="password">
             <input type="text" autocomplete="off" id="number" placeholder="phone number">
-            <input type="checkbox" class="checkbox" checked id="term-and-cond">
-            <label for="term-and-cond">I agree with <a href="#">Term and Condition</a></label>
+            <input type="checkbox" class="checkbox" checked id="terms-and-cond">
+            <label for="terms-and-cond">I agree with <a href="/terms">Terms and Condition</a></label>
             <br>
             <input type="checkbox" class="checkbox" id="notification">
             <label for="notification">I agree to receive <a href="#">upcoming offers and news</a></label>
