update: small improvments

--- a/Public/addProduct.html
+++ b/Public/addProduct.html
@@ -97,12 +97,7 @@
 
 <!--        // Your web app's Firebase configuration-->
 <!--        const firebaseConfig = {-->
-<!--            apiKey: "AIzaSyCB-JoobxE4Jkyq-HWgfkZFWszZhjTFfXs",-->
-<!--            authDomain: "ajshop-be1e0.firebaseapp.com",-->
-<!--            projectId: "ajshop-be1e0",-->
-<!--            storageBucket: "ajshop-be1e0.appspot.com",-->
-<!--            messagingSenderId: "136800496353",-->
-<!--            appId: "1:136800496353:web:b8972f32172498b3bbe5a0"-->
+
 <!--        }-->
 
 
@@ -198,6 +193,6 @@
 <!--    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-storage.js"></script>-->
 
     <script src="js/addProduct.js"></script>
-<!--    <script src="js/token.js"></script>-->
+    <script src="js/token.js"></script>
 </body>
 </html>
