--- a/Public/privacy.html
+++ b/Public/privacy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Terms and Conditions</title>
+    <title>VF Shop | Privacy Policy</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -60,7 +60,7 @@
 
     <section>
         <h3 class="heading">Contact Us</h3>
-        <p class="terms-info">If you have questions or concerns about this Privacy Policy or your personal information, please contact us at [insert contact information].<br> </p>
+        <p class="terms-info">If you have questions or concerns about this Privacy Policy or your personal information, please contact us at <a>customersupport@vfshop.com.</a><br> </p>
         <p class="terms-info">Thank you for trusting VF Shop with your information. We are committed to maintaining your privacy and providing you with the best possible experience.<br> </p>
     </section>
 
