--- a/Public/signup.html
+++ b/Public/signup.html
@@ -27,7 +27,9 @@
     </div>
 
     <div class="container">
-        <img class="logo" src="img/logo-green.png" alt="">
+        <a href="/">
+            <img class="logo" src="img/logo-green.png" class="brand-logo" alt="">
+        </a>
         <div>
             <input type="text" autocomplete="off" id="name" placeholder="name">
             <input type="email" autocomplete="off" id="email" placeholder="email">
@@ -44,6 +46,7 @@
         <a href="/login" class="link">Login here</a>
     </div>
 
+    <script src="js/token.js"></script>
     <script src="js/form.js"></script>
 
 </body>
