--- a/Public/index.html
+++ b/Public/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>VF | Elegant Clothing For Her and For Him | Made in USA &ndash; VF</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clothing - Best Apparels Online Store</title>
+    <title>VF | Elegant Clothing For Her and For Him | Made in USA – VF</title>
 
     <link rel="stylesheet" href="css/home.css">
 
@@ -17,7 +16,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krub:wght@500&display=swap" rel="stylesheet">
-<!--    <link href="https://fonts.googleapis.com/css2?family=Ruda&display=swap" rel="stylesheet">-->
 
 </head>
 <body>
