--- a/Public/terms.html
+++ b/Public/terms.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Terms and Conditions</title>
+    <title>VF Shop | Terms and Conditions</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -51,7 +51,7 @@
 
     <section>
         <h3 class="heading">5. Privacy</h3>
-        <p class="terms-info">Your data is important. Read our <a href="#">Privacy Policy</a> to understand how we handle your information.</p>
+        <p class="terms-info">Your data is important. Read our <a href="/privacy">Privacy Policy</a> to understand how we handle your information.</p>
     </section>
 
     <section>
