--- a/Public/login.html
+++ b/Public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VF Shop | Create account</title>
+    <title>VF Shop | Sign In</title>
 
     <link rel="stylesheet" href="css/signup.css">
 
@@ -31,19 +31,12 @@
             <img class="logo" src="img/logo-green.png" class="brand-logo" alt="">
         </a>
         <div>
-            <input type="text" autocomplete="off" id="name" placeholder="name">
             <input type="email" autocomplete="off" id="email" placeholder="email">
             <input type="password" autocomplete="new-password" id="password" placeholder="password">
-            <input type="text" autocomplete="off" id="number" placeholder="phone number">
-            <input type="checkbox" class="checkbox" checked id="terms-and-cond">
-            <label for="terms-and-cond">I agree with <a href="/terms">Terms and Condition</a></label>
-            <br>
-            <input type="checkbox" class="checkbox" id="notification">
-            <label for="notification">I agree to receive <a href="#">upcoming offers and news</a></label>
-            <button class="submit-btn">Create Account</button>
+            <button class="submit-btn">Log In</button>
         </div>
-        <span>Already have an account?</span>
-        <a href="/login" class="link">Login here</a>
+        <span>Don't  have an account? Create one</span>
+        <a href="/signup" class="link">Sign up here</a>
     </div>
 
     <script src="js/token.js"></script>
