Add: create product

--- a/Public/addProduct.html
+++ b/Public/addProduct.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> vf Shop | Add Product</title>
 
-    <link rel="stylesheet" href="css/signup.css">
-    <link rel="stylesheet" href="css/addProduct.css">
+    <link rel="stylesheet" href="../css/signup.css">
+    <link rel="stylesheet" href="../css/addProduct.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
@@ -19,14 +19,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="img/loader.gif" class="loader" alt="">
+    <img src="../img/loader.gif" class="loader" alt="">
 
     <div class="alert-box">
-        <img src="img/error.png" class="alert-img" alt="">
+        <img src="../img/error.png" class="alert-img" alt="">
         <p class="alert-msg">Error message</p>
     </div>
 
-    <img src="img/logo-green.png" class="logo" alt="">
+    <img src="../img/logo-green.png" class="logo" alt="">
 
     <div class="form">
         <input type="text" id="product-name" maxlength="50" placeholder="product name">
@@ -39,7 +39,7 @@
             </div>
             <div class="upload-image-section">
                 <div class="upload-image-section-title">
-                    <img src="img/camera-icon.png" alt="">
+                    <img src="../img/camera-icon.png" alt="">
                     <p class="text">upload images</p>
                 </div>
                 <form>
@@ -78,7 +78,7 @@
 
         <input type="number" id="stock" min="20" placeholder="Items in stocks (minimum 20)">
         <textarea id="tags" placeholder="Enter categories here. You should start with Men, Women or Accessories. For example, Men, Jeans, Blue etc..."></textarea>
-        <input type="checkbox" class="checkbox" id="tac" checked>"
+        <input type="checkbox" class="checkbox" id="tac" checked>
         <label for="tac">VFShop takes 30% from your total sell.</label>
 
         <div class="buttons">
@@ -89,7 +89,7 @@
     </div>
 
 
-    <script src="js/addProduct.js"></script>
-    <script src="js/token.js"></script>
+    <script src="../js/token.js"></script>
+    <script src="../js/addProduct.js"></script>
 </body>
 </html>
